--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,32 +1,37 @@
 backend:
   name: git-gateway
   branch: master
-
+display_url: https://kind-varahamihira-2770af.netlify.com/products
 media_folder: static/img
 public_folder: /img
 
 collections:
-  - name: "blog"
-    label: "Blog"
-    folder: "src/pages/blog"
+  - name: "burrito-reviews"
+    label: "Burrito Reviews"
+    folder: "src/pages/scores"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{slug}}"
     fields:
-      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "blog-post"}
-      - {label: "Title", name: "title", widget: "string"}
-      - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Description", name: "description", widget: "text"}
-      - {label: "Body", name: "body", widget: "markdown"}
-      - {label: "Tags", name: "tags", widget: "list"}
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "burrito-review"}
+      - {label: "Resteraunt Name", name: "resteraunt-name", widget: "string"}
+      - {label: "Rank", name: "rank", widget: "string"}
+      - {label: "Short-Description", name: "sub", widget: "text"}
+      - {label: "Highlights", name: "highlights", widget: "list", default: ["Dopeness."]}
+      - {label: "Rank Out of 5", name: "overall-score", widget: "number", min: 1, max: 5}
+      - {label: "Flavor Score", name: "flavor-score", widget: "number", min: 1, max: 5}
+      - {label: "Drippage Score", name: "flavor-score", widget: "number", min: 1, max: 5}
+      - {label: "Ingedients Score", name: "flavor-score", widget: "number", min: 1, max: 5}
+      - {label: "Style Score", name: "flavor-score", widget: "number", min: 1, max: 5}
+      - {label: "Brief Review", name: 'review', widget: "text"}
 
   - name: "pages"
     label: "Pages"
     files:
       - file: "src/pages/about/index.md"
-        label: "About"
-        name: "about"
+        label: "Home"
+        name: "home"
         fields:
-          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page"}
+          - {label: "Template Key", name: "templateKey", widget: "hidden", default: "home-page"}
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
       - file: "src/pages/products/index.md"
