--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: git-gateway
-  branch: master
+  branch: staging
 display_url: https://burrito-six.netlify.com
 media_folder: static/img
 public_folder: /img
