--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,14 +15,19 @@ collections:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "burrito-review"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Resteraunt Name", name: "resteraunt_name", widget: "string"}
-      - {label: "Rank", name: "rank", widget: "string"}
+      - {label: "Rank", name: "rank", widget: "number", valueType: 'float'}
       - {label: "Short-Description", name: "sub", widget: "text"}
-      - {label: "Highlights", name: "highlights", widget: "list", default: ["Dopeness."]}
-      - {label: "Rank Out of 5", name: "overall_score", widget: "number", valueType: "int", min: 1, max: 5}
-      - {label: "Flavor Score", name: "flavor_score", widget: "number", valueType: "int", min: 1, max: 5}
-      - {label: "Drippage Score", name: "drip_score", widget: "number", min: 1, max: 5}
-      - {label: "Ingedients Score", name: "ingredient_score", widget: "number", min: 1, max: 5}
-      - {label: "Style Score", name: "style_score", widget: "number", min: 1, max: 5}
+      - label: "Highlights"
+        name: "highlights"
+        widget: "list"
+        allow_add: true
+        fields:
+          - {label: highlight, name: highlight_data, widget: string}
+      - {label: "Rank Out of 5", name: "overall_score", widget: "number", valueType: "float", min: 1, max: 5}
+      - {label: "Flavor Score", name: "flavor_score", widget: "number", valueType: "float", min: 1, max: 5}
+      - {label: "Drippage Score", name: "drip_score", widget: "number", valueType: "float", min: 1, max: 5}
+      - {label: "Ingedients Score", name: "ingredient_score", widget: "number", valueType: "float", min: 1, max: 5}
+      - {label: "Style Score", name: "style_score", widget: "number", valueType: "float", min: 1, max: 5}
       - {label: "Brief Review", name: 'review', widget: "text"}
 
   - name: "pages"
