--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -41,7 +41,7 @@ collections:
           - {label: "Is A Page", name: "isPage", widget: "hidden", default: true}
           - {label: "Title", name: "title", widget: "string", default: "Home"}
           - {label: "Subtitle", name: "subtitle", widget: "string"}
-          - {label: "List Name", name: 'list-name', widget: "string"}
+          - {label: "List Name", name: 'list_name', widget: "string"}
       - file: "src/pages/about/index.md"
         label: "About"
         name: "about"
@@ -50,4 +50,5 @@ collections:
           - {label: "Is A Page", name: "isPage", widget: "hidden", default: true}
           - {label: "Title", name: "title", widget: "string", default: "About"}
           - {label: "Subtitle", name: "subtitle", widget: "string"}
-          - {label: "List Name", name: 'list-name', widget: "string"}
+          - {label: "List Name", name: 'list_name', widget: "string"}
+          - {label: "Blog post content", name: "body", widget: "markdown"}
