--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,7 +15,7 @@ collections:
       - {label: "Template Key", name: "templateKey", widget: "hidden", default: "burrito-review"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Restaurant Name", name: "restaurant_name", widget: "string"}
-      - {label: "Rank", name: "rank", widget: "number", valueType: 'float'}
+      - {label: "Rank", name: "rank", widget: "number", valueType: "float"}
       - {label: "Short-Description", name: "sub", widget: "text"}
       - label: "Highlights"
         name: "highlights"
@@ -41,7 +41,7 @@ collections:
           - {label: "Is A Page", name: "isPage", widget: "hidden", default: true}
           - {label: "Title", name: "title", widget: "string", default: "Home"}
           - {label: "Subtitle", name: "subtitle", widget: "string"}
-          - {label: "List Name", name: 'list_name', widget: "string"}
+          - {label: "List Name", name: "list_name", widget: "string"}
       - file: "src/pages/about/index.md"
         label: "About"
         name: "about"
@@ -50,5 +50,5 @@ collections:
           - {label: "Is A Page", name: "isPage", widget: "hidden", default: true}
           - {label: "Title", name: "title", widget: "string", default: "About"}
           - {label: "Subtitle", name: "subtitle", widget: "string"}
-          - {label: "List Name", name: 'list_name', widget: "string"}
+          - {label: "List Name", name: "list_name", widget: "string"}
           - {label: "Blog post content", name: "body", widget: "markdown"}
