--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Austin Green",
   "dependencies": {
     "@raygesualdo/gatsby-plugin-babel-styled-components": "^1.0.1",
+    "chart.js": "^2.7.2",
     "gatsby": "^1.9.213",
     "gatsby-link": "^1.6.37",
     "gatsby-plugin-google-analytics": "^1.0.31",
@@ -22,10 +23,12 @@
     "netlify-cms": "^1.7.0",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.0",
-    "react": "^16.2.0",
+    "react-chartjs-2": "^2.7.2",
     "react-helmet": "^5.2.0",
+    "react-transition-group": "^2.3.1",
     "sharp": "^0.20.3",
     "styled-components": "^3.3.0",
+    "styled-transition-group": "^1.0.0",
     "uuid": "^3.2.1"
   },
   "keywords": [
